--- a/MillerFarmsWeb/index.html
+++ b/MillerFarmsWeb/index.html
@@ -8,6 +8,7 @@
         <meta name="description" content="An interactive getting started guide for Brackets.">
         <link rel="stylesheet" href="Css/main.css"/> 
         <link rel="stylesheet" href="Css/Bootstrap.css">
+        <meta name="viewport" content="width=device-width, initial-scale=1">
         <script src="Scripts/angular.js"></script>
         <script src="Scripts/jquery-1.9.1.js"></script>
         <script src="Scripts/bootstrap.js"></script>
@@ -49,8 +50,8 @@
                 <label>TestWeight:</label><input type="text" name="input" ng-model="Ticket.TestWeight" required>
             </div>
             <div class="form-group">
-                <button type="submit" class=" btn btn-primary">Submit</button>
-                <input type="button" class=" btn btn-danger" value="Cancel" name="Cancel" ng-click="cancelClick()">
+                <button type="submit" class="btn btn-primary">Submit</button>
+                <input type="button" class="btn btn-danger" value="Cancel" name="Cancel" ng-click="cancelClick()">
             </div>       
         </form>
         </div>
@@ -82,8 +83,8 @@
                 </select>
             </div>
             <div class="form-group">
-                <button type="submit" class=" btn btn-primary">Submit</button>
-                <input type="button" class=" btn btn-danger" value="Cancel" name="Cancel" ng-click="cancelClick()">
+                <button type="submit" class="btn btn-primary">Submit</button>
+                <input type="button" class="btn btn-danger" value="Cancel" name="Cancel" ng-click="cancelClick()">
             </div>  
         </form>
         </div>
@@ -106,8 +107,8 @@
                 <label>In Weight:</label><label>{{Ticket.InWeight}}</label>
             </div>
             <div class="form-group">
-                <input type="button" class="btn-primary" value="Save Inbound" name="SaveInbound" ng-click= "saveInboundClick()">
-                <input type="button" class=" btn btn-danger" value="Cancel" name="Cancel" ng-click="cancelClick()">
+                <input type="button" class="btn btn-primary" value="Save Inbound" name="SaveInbound" ng-click= "saveInboundClick()">
+                <input type="button" class="btn btn-danger" value="Cancel" name="Cancel" ng-click="cancelClick()">
             </div>                     
         </div>
                 
@@ -140,8 +141,8 @@
                 <label>Net:</label><label>{{Ticket.Net}}</label>
             </div>
             <div class="form-group">
-                <input type="button" class="btn-primary" value="Save Outbound" name="SaveOutbound" ng-click= "saveOutboundClick()">
-                <input type="button" class=" btn btn-danger" value="Cancel" name="Cancel" ng-click="cancelClick()">
+                <input type="button" class="btn btn-primary" value="Save Outbound" name="SaveOutbound" ng-click= "saveOutboundClick()">
+                <input type="button" class="btn btn-danger" value="Cancel" name="Cancel" ng-click="cancelClick()">
             </div>
         </div>     
       
