--- a/MillerFarmsWeb/index.html
+++ b/MillerFarmsWeb/index.html
@@ -9,6 +9,8 @@
         <link rel="stylesheet" href="Css/main.css"/> 
         <link rel="stylesheet" href="Css/Bootstrap.css">
         <meta name="viewport" content="width=device-width, initial-scale=1">
+        <script src=Scripts/RemObjectsSDK.js></script>
+        <script src="Scripts/CommonLibrary_intf.js"></script>
         <script src="Scripts/angular.js"></script>
         <script src="Scripts/jquery-1.9.1.js"></script>
         <script src="Scripts/bootstrap.js"></script>
