More playing with Weight

--- a/MillerFarmsWeb/index.html
+++ b/MillerFarmsWeb/index.html
@@ -93,7 +93,7 @@
 			  <li><strong>Commodity:</strong>{{Ticket.Commodity.Name}}</li>
 			  <li><strong>Field:</strong>{{Ticket.Field.Name}}</li>
 			  <li><strong>Farm:</strong>{{Ticket.Farm.Name}}</li>
-			  <li><strong>In Weight:</strong>{{Ticket.InWeight}}</li>
+			  <li><strong>In Weight:</strong>{{CurrentWeight}}</li>
 			</ul>
             <div class="form-group full-width">
                 <input type="button" class="btn btn-primary" value="Save Inbound" name="SaveInbound" ng-click= "saveInboundClick()">
